k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: tailscale-ip-only
  namespace: docs
spec:
  ipAllowList:
    sourceRange:
      - 100.64.0.0/10
      - 10.0.0.0/16
      - 10.42.0.0/16
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-docs-strip
  namespace: docs
spec:
  stripPrefix:
    prefixes:
      - /local-docs
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-docs-redirect
  namespace: docs
spec:
  redirectRegex:
    permanent: true
    regex: ^(.*)/local-docs$
    replacement: ${1}/local-docs/
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: root-to-localdocs
  namespace: docs
spec:
  redirectRegex:
    permanent: true
    regex: ^https?://([^/]+)/?$
    replacement: https://${1}/local-docs/
